* Completely remove the cache directory * Make buffer timestamps milisecond-specific in UTC
